filing/css/styles.css
/* ... */
blockquote {
	border-left: 1px solid rgb(221, 221, 221, 0.2);
	padding: 0 20px 0 20px;
	margin: 0;
}

hr {
	margin: 40px 0 20px 0;
	border-top: 1px solid #1a1a1a;
}

hr.large {
	margin: 60px 0 30px 0;
	border-top: 1px solid #1a1a1a;
	opacity: 0.8;
}

.opacity {
	opacity: 0.4;
}

.hover {
	text-decoration: none;
}

.uppercase {
	text-transform: uppercase;
}

.quote {
	padding-top: 8px;
	display: inline-block;
}

footer {
	padding: 60px 0 0 0;
}

/* Dannual Report */

/*.report header {
	background-image: url("/filing/images/2020.png");
	background-repeat: no-repeat;
	background-position: left bottom;
	background-size: contain;
	max-width: 100%;
	padding-top: 30%;
	padding-bottom: 30px;
	margin-bottom: 300px;
}

.report header p {
	font-weight: 300;
	font-size: 42px;
	line-height: 58px;
	padding-top: 20px;
	max-width: 1740px;
}

.report h2 {
	font-weight: 700;
	font-size: 56px;
	line-height: 66px;
	padding: 200px 0 30px 0;
}

.report h4 {
	font-size: 28px;
	padding: 50px 0 20px 0;
	text-transform: none;
	opacity: 1;
}

.report h3 sup,
.report h4 sup {
	font-weight: normal;
}

.featured {
	font-weight: 300;
	font-size: 28px;
	line-height: 38px;
	max-width: 1140px;
	padding: 25vh 0 140px 0;
}

.report section {
	max-width: 1680px;
}

.report section p,
.report section blockquote,
.report section hr {
	max-width: 780px;
}

.featured a:hover,
a.email:hover,
.report header p a:hover {
	opacity: 0.5;
	text-decoration: underline;
}

.report header p a {
	text-decoration: none;
	border-bottom: 1px solid #ffffff;
}

.report header p a:hover {
	text-decoration: none;
	border-bottom: 1px solid 0.5;
}

.report .category-emoji {
	font-size: 42px;
	line-height: 52px;
	padding: 20px 0 0 0;
}*/

/*.emoji {
        animation: animateIn 0.5s;
        -moz-animation: animateIn 0.5s;
        -webkit-animation: animateIn 0.5s;
        -o-animation: animateIn 0.5s;
        animation-fill-mode: forwards;
        -moz-animation-fill-mode: forwards;
        -webkit-animation-fill-mode: forwards;
        -o-animation-fill-mode: forwards;
        opacity: 0;
      }
      @keyframes animateIn {
        from {
          opacity: 0;
        }
        to {
          opacity: 1;
        }
      }*/

/*.report .category {
	padding: 20px 0 180px 0;
}

.report .data {
	padding: 60px 0 60px 0;
}

.report .data div {
	font-size: 20px;
	padding: 0 0 10px 0;
}

.report .name {
	padding: 20px 0 40px 0;
}

.report .name img {
	padding: 0 15px 0 0;
}

.report ul.categories {
	padding: 40px 0 160px 0;
}

.report ul.categories a {
	padding-left: 4px;
}

.report .name p.caption {
	padding-top: 30px;
	line-height: 18px;
}

.report .data span {
	padding-right: 2px;
}

.featured hr {
	margin: 0px 0 20px 0;
}

.report hr {
	margin: 20px 0 30px 0;
}*/

/* ==|== media queries ======================================================
   EXAMPLE Media Query for Responsive Design.
   This example overrides the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */

@media only screen and (max-width: 1680px) {
	header {
		padding-top: 40vh;
	}
	.work header {
		padding-top: 55vh;
	}
	.images {
		max-width: 1440px;
	}
	.column-40 {
		max-width: 520px;
	}
	/*	.report header {
		background: none;
		padding-top: 32%;
		margin-bottom: 200px;
	}
	.report header h1 {
		font-size: 126px;
		line-height: 136px;
	}
	.report header p {
		max-width: 1420px;
		font-size: 28px;
		line-height: 38px;
	}
	.report section {
		max-width: 1420px;
	}*/
}
@media only screen and (max-width: 1460px) {
	header {
		padding-top: 30vh;
	}
}

@media only screen and (max-width: 900px) {
	.container {
		padding: 20px 20px;
	}
	.anchor {
		display: none;
	}
	.URL {
		padding-right: 25%;
	}
	header {
		padding-top: 40vh;
	}
	.work header {
		padding-top: 55vh;
	}
	/*.report header {
		padding-top: 20%;
		margin: 0;
	}*/
	/*.work header {
		margin: 0;
	}*/
	h1 {
		font-size: 70px;
		line-height: 74px;
	}
	.work header h1 {
		font-size: 38px;
		line-height: 48px;
	}
	.report header h1 {
		font-size: 42px;
		line-height: 52px;
	}
	.report h2 {
		font-size: 28px;
		line-height: 38px;
		padding: 60px 0 10px 0;
	}
	h2,
	h3,
	.report header p {
		font-size: 20px;
		line-height: 28px;
		padding: 10px 0 10px 0;
	}
	.report h3 {
		font-size: 20px;
		line-height: 28px;
		padding: 10px 0 20px 0;
	}
	.report h4 {
		font-size: 14px;
		padding: 20px 0 10px 0;
	}
	p.intro {
		font-size: 18px;
		line-height: 24px;
	}
	.report p.intro {
		padding: 0;
	}
	.featured {
		font-size: 20px;
		line-height: 30px;
	}
	.images,
	.featured {
		padding: 140px 0 70px 0;
	}
	.featured hr {
		margin: 0px 0 5px 0;
	}
	.row {
		display: block;
	}
	.column-100 {
		flex: 100%;
		padding: 0;
	}
	.column-60 {
		flex: 100%;
		padding: 0;
	}
	.column-40 {
		flex: 100%;
		padding: 0;
	}
	.hide {
		display: none;
	}
	.report ul.categories {
		padding: 20px 0 40px 0;
	}
	.report .category {
		padding: 40px 0 20px 0;
	}
	.report .data {
		padding: 20px 0 20px 0;
	}
	.report .data div {
		font-size: 10px;
		padding: 0 0 10px 0;
	}
	.report .emoji {
		font-size: 28px;
		line-height: 28px;
		padding: 10px 0 0 0;
	}
	.report hr {
		margin: 10px 0 10px 0;
	}
	table {
		padding-top: 60px;
	}
	td {
		padding-right: 40px;
	}
}

@media only screen and (max-width: 320px) {
	h1,
	.report header h1 {
		font-size: 56px;
		line-height: 66px;
	}
	h2,
	.report h2 {
		font-size: 18px;
		line-height: 24px;
	}
}

/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir {
	display: block;
	border: 0;
	text-indent: -999em;
	overflow: hidden;
	background-color: transparent;
	background-repeat: no-repeat;
	text-align: left;
	direction: ltr;
	*line-height: 0;
}
.ir br {
	display: none;
}
/* ... */

